Local Database, and Order View Centered

--- a/CodeCafe/appsettings.json
+++ b/CodeCafe/appsettings.json
@@ -8,6 +8,7 @@
     },
     "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CafeContext": "Server=tcp:cafe-server.database.windows.net,1433;Initial Catalog=CafeDb;Persist Security Info=False;User ID=eric;Password=Password!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+
+    "CafeContext": "Server=(localdb)\\mssqllocaldb;Database=Cafe;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
